[gd_scene load_steps=3 format=3 uid="uid://jrtlocerxa4y"]

[ext_resource type="Script" uid="uid://bper8hk6pwtla" path="res://LeaderboardMenu/leaderboard_menu.gd" id="1_krbq1"]

[sub_resource type="SystemFont" id="SystemFont_khu55"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[node name="LeaderboardMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_krbq1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_khu55")
theme_override_font_sizes/font_size = 32
text = "Leaderboard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings_Tab_Container" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/Settings_Tab_Container"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 0

[node name="Easy" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Settings_Tab_Container/TabContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
metadata/_tab_index = 0

[node name="Medium" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Settings_Tab_Container/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Hard" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Settings_Tab_Container/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Special" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Settings_Tab_Container/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Exit_Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
size_flags_vertical = 8
text = "Exit"

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
